--- a/asciidocs/docs/index.adoc
+++ b/asciidocs/docs/index.adoc
@@ -6,3 +6,9 @@ ifndef::imagesdir[:imagesdir: images]
 
 === Projektbeschreibung
 Das Informatikportal soll als interaktive Lernplattform benutzt werden, welches den Nutzern und Nutzerinnen ermöglicht, ihre Programmierkenntnisse zu erweitern und grundlegende Informatikthemen zu verstehen. Die Plattform bietet Aufgaben, Tutorials und Informationen zu aktuellen Technologien.
+
+=== Projektziele
+* Entwicklung einer Plattform zur Lösung von Programmieraufgaben
+* Verbesserung praktischer Programmierfähigkeiten durch interaktive Übungen
+* Bereitstellung von Ressourcen zur Vertiefung des Informatikverständnisses
+* Förderung der Lernmotivation durch ein Punktesystem und Ranglisten
